# webchathub

./: .gitignore  Cargo.toml  README.md  README_en.md  UpdateSchedule.md
src/: config.rs  error.rs  hub.rs  lib.rs  memory_pool.rs  protocol.rs  room.rs
src/client/: ui.rs
src/server/: listener.rs
tests/: integrate_test.rs  integration_server.rs
