[package]
name = "my_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18"
tungstenite = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.9"
tui = "0.19"
crossterm = "0.29.0"
warp = { version = "0.3", features = ["tls"] }
webbrowser  = "0.8"
open = "3"